--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "node": ">=8.6"
   },
   "dependencies": {
+    "@frontant/utils-dom": "^2.0.3",
+    "body-scroll-lock": "^3.0.3",
     "core-js": "^3.1.4",
     "document-register-element": "^1.14.3",
+    "intersection-observer": "^0.10.0",
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
